add token component / fix staff

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -41,6 +41,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../bower_components/paper-listbox/paper-listbox.html">
 <link rel="import" href="../bower_components/paper-checkbox/paper-checkbox.html">
+<link rel="import" href="../bower_components/paper-fab/paper-fab.html">
 
 <!-- Neon Elements -->
 <link rel="import" href="../bower_components/neon-animation/animations/scale-up-animation.html">
@@ -74,4 +75,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="session-element.html">
 <link rel="import" href="tokens-element.html">
 <link rel="import" href="token-element.html">
+<link rel="import" href="token-add-element.html">
 <link rel="import" href="users.html">
