--- a/app/elements/plan-element.html
+++ b/app/elements/plan-element.html
@@ -40,17 +40,9 @@
         <hr>
         <p>[[priceText]]</p>
         <p>[[descriptionText]]</p>
-        <template is="dom-if" if="[[plan.promo]]">
-          <p>[[plan.promo.description]]</p>
-        </template>
-
-        <template is="dom-if" if="[[expirationDate]]">
-          <p>expires on [[expirationDate]]</p>
-        </template>
-
-        <template is="dom-if" if="[[plan.promo.notUsed]]">
-          <paper-button raised on-tap="_selectPlan" plan="[[plan]]">Select</paper-button>
-        </template>
+        <p hidden$="[[!plan.promo]]">[[plan.promo.description]]</p>
+        <p hidden$="[[!expirationDate]]">expires on [[expirationDate]]</p>
+        <paper-button hidden$="[[!plan.promo.notUsed]]" raised on-tap="_selectPlan">Select</paper-button>
       </div>
     </paper-card>
   </template>
@@ -107,8 +99,7 @@
           return '';
         },
         _selectPlan: function(e) {
-          var plan = e.currentTarget.plan;
-          console.log(plan);
+          console.log(this.plan);
         },
         _triggerInfo: function() {
           console.log('info popup');
