--- a/app/elements/subscription-element.html
+++ b/app/elements/subscription-element.html
@@ -30,7 +30,7 @@
       }
     </style>
 
-    <div class$="info-item flex-horizontal-with-ratios plan-record [[isExpiringClass]] [[indexClass]]">
+    <div class$="info-item flex-horizontal-with-ratios plan-record [[isExpiringClass]] [[zebraClasses]]">
       <div class="flexchild plan-date">[[dateText]]</div>
       <div class="flexchild plan-title text-center">[[titleText]]</div>
       <div class="flexchild plan-action text-right">[[subscription.action]]</div>
@@ -66,18 +66,21 @@
             type: String,
             computed: '_computeIsExpiringClass(subscription.action)'
           },
-          indexClass: {
+          zebraClasses: {
             type: String,
-            computed: '_computeIsIndexClass(index, count)'
+            computed: '_computeZebraClasses(index, count)'
           }
         },
         ready: function() {
 
         },
-        _computeIsIndexClass: function(index, count) {
-            var classes = [];
-            classes.push(index % 2 != 0 ? 'even' : 'odd', index + 1 == count ? 'last' : null);
-            return classes.join(' ');
+        _computeZebraClasses: function(index, count) {
+          var classes = [];
+          classes.push(
+            (index + 1) % 2 == 0 ? 'even' : 'odd',
+            index + 1 == count ? 'last' : null
+          );
+          return classes.join(' ');
         },
         _computeTitleText: function(title, isTrial, promoCode) {
           return title + (isTrial ? ' (trial)' : (promoCode ? ' (promo)' : null));
