fix components naming

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -66,14 +66,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="register-element.html">
 <link rel="import" href="details-element.html">
 <link rel="import" href="password-element.html">
-<link rel="import" href="billing-element.html">
-<link rel="import" href="plan-element.html">
-<link rel="import" href="feedback-element.html">
-<link rel="import" href="subscriptions-element.html">
-<link rel="import" href="subscription-element.html">
-<link rel="import" href="sessions-element.html">
-<link rel="import" href="session-element.html">
-<link rel="import" href="tokens-element.html">
-<link rel="import" href="token-element.html">
+<link rel="import" href="plans-list-element.html">
+<link rel="import" href="plan-item-element.html">
+<link rel="import" href="feedback-page-element.html">
+<link rel="import" href="subscriptions-list-element.html">
+<link rel="import" href="subscription-item-element.html">
+<link rel="import" href="sessions-list-element.html">
+<link rel="import" href="session-item-element.html">
+<link rel="import" href="tokens-list-element.html">
+<link rel="import" href="token-item-element.html">
 <link rel="import" href="token-add-element.html">
 <link rel="import" href="users.html">
