--- a/app/elements/feedback-page-element.html
+++ b/app/elements/feedback-page-element.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/paper-styles/typography.html">
 
-<dom-module id="feedback-element">
+<dom-module id="feedback-page-element">
   <template>
     <style include="shared-styles">
       :host {
@@ -142,7 +142,7 @@
       'use strict';
 
       Polymer({
-        is: 'feedback-element',
+        is: 'feedback-page-element',
 
         properties: {
           pageSecond: {
