--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -78,8 +78,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'password';
     });
 
-    page('/billing', function() {
-      app.route = 'billing';
+    page('/plans', function() {
+      app.route = 'plans';
     });
 
     page('/feedback', function() {
