--- a/app/elements/session-item-element.html
+++ b/app/elements/session-item-element.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/paper-styles/typography.html">
 
-<dom-module id="session-element">
+<dom-module id="session-item-element">
   <template>
     <style include="shared-styles">
       :host {
@@ -78,7 +78,7 @@
       'use strict';
 
       Polymer({
-        is: 'session-element',
+        is: 'session-item-element',
 
         properties: {
           session: {
