--- a/app/elements/plan-item-element.html
+++ b/app/elements/plan-item-element.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/paper-styles/typography.html">
 
-<dom-module id="plan-element">
+<dom-module id="plan-item-element">
   <template>
     <style include="shared-styles">
       :host {
@@ -52,7 +52,7 @@
       'use strict';
 
       Polymer({
-        is: 'plan-element',
+        is: 'plan-item-element',
 
         properties: {
           plan: {
