--- a/app/elements/subscription-item-element.html
+++ b/app/elements/subscription-item-element.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/paper-styles/typography.html">
 
-<dom-module id="subscription-element">
+<dom-module id="subscription-item-element">
   <template>
     <style include="shared-styles">
       :host {
@@ -42,7 +42,7 @@
       'use strict';
 
       Polymer({
-        is: 'subscription-element',
+        is: 'subscription-item-element',
 
         properties: {
           subscription: {
