--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -58,6 +58,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'contact';
     });
 
+    page('/notes', function() {
+      app.route = 'notes';
+    });
+
     page('/add-cloud', function() {
       app.route = 'add-cloud';
     });
