--- a/app/elements/notes-page-element.html
+++ b/app/elements/notes-page-element.html
@@ -19,8 +19,9 @@
           <div class="markdown-html"></div>
           <script type="text/markdown">
             ### Avatar
+            - Add custom gravatar component
             - Listen events from the details element to update email, name and gravatar
-            
+
             ### Add Cloud
             - Place the real Object
             - Create dynamic dropdowns
