add key element / add done images to help rest of team

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -66,7 +66,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="my-greeting/my-greeting.html">
 <link rel="import" href="my-list/my-list.html">
 <link rel="import" href="notes-page-element.html">
-<link rel="import" href="add-cloud.html">
+<link rel="import" href="cloud-add-element.html">
+<link rel="import" href="key-add-element.html">
 <link rel="import" href="login-element.html">
 <link rel="import" href="register-element.html">
 <link rel="import" href="details-element.html">
