--- a/app/elements/notes-page-element.html
+++ b/app/elements/notes-page-element.html
@@ -27,6 +27,10 @@
             - Create dynamic dropdowns
             - Add validation
 
+            ### Add Key
+            - Set up upload key file
+            - Set up iron-ajax requests for generate / save
+
             ### Plans
             - Change the layout
             - Apply a different if...else logic in the template
