--- a/app/elements/cloud-add-element.html
+++ b/app/elements/cloud-add-element.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/paper-styles/typography.html">
 
-<dom-module id="add-cloud">
+<dom-module id="cloud-add-element">
   <template>
     <style include="shared-styles">
       :host {
@@ -64,7 +64,7 @@
       'use strict';
 
       Polymer({
-        is: 'add-cloud',
+        is: 'cloud-add-element',
 
         properties: {
           provider: {
