--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -66,6 +66,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'add-cloud';
     });
 
+    page('/add-key', function() {
+      app.route = 'add-key';
+    });
+
     page('/login', function() {
       app.route = 'login';
     });
